[build-system]
requires = ["setuptools", "wheel"]  # Add "setuptools-scm" if you use it for versioning
build-backend = "setuptools.build_meta"

[project]
name = "gcspy"
version = "0.1.0"
description = "Library based on CVXPY to solve optimization problems in Graphs of Convex Sets (GCS). The techniques implemented here are based on the paper Shortest Paths in Graphs of Convex Sets by Tobia Marcucci, Jack Umenberger, Pablo A. Parrilo, and Russ Tedrake."
authors = [
    { name = "Tobia Marcucci"}
]
dependencies = [
    "cvxpy >= 1.5"
]

[tool.setuptools.packages.find]
where = ["gcspy"]
